# Layla-Shell

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.Eclipse  NEWS  README  README.md
docs/: lsh_man.html  posix_features.txt
docs/info/: lsh.info  lsh.texi
docs/man/man1/: lsh.1
src/: alphalist.c  args.c  braceexp.c  buffer.c  cmd.h  cmd_args.c  cmdline.c  comptype.h  cpu.h  debug.c  debug.h  dstring.c  early_environ.h  functab.c  getkey.c  getkey.h  helpfunc.c  heredoc.c  initsh.c  jobs.c  kbdevent.h  kbdevent2.c  main.c  ostype.h  params.c  popen.c  prompt.c  shunt.c  sig.c  sig.h  signames.c  signames.h  strbuf.c  strings.c  tab.c  terminal.c  utf.c  vars.c  vi.c  vi.h  (+2 more)
src/backend/: backend.c  backend.h  conditionals.c  loops.c  pattern.c  redirect.c  shunt.c
src/builtins/: alias.c  bg.c  bugreport.c  builtins.c  builtins.h  caller.c  cd.c  colon.c  command.c  coproc.c  declare.c  dirstack.c  disown.c  dot.c  dump.c  echo.c  enable.c  eval.c  exec.c  exit.c  export.c  false.c  fc.c  fg.c  getopts.c  glob.c  hash.c  help.c  hist_expand.c  history.c  hup.c  kill.c  let.c  local.c  logout.c  mailcheck.c  memusage.c  newgrp.c  nice.c  notify.c  (+30 more)
src/error/: error.c  error.h
src/include/: cmd.h  comptype.h  dstring.h  early_environ.h  ostype.h  sig.h  utf.h
src/parser/: conditionals.c  loops.c  node.c  node.h  parser.c  parser.h  redirect.c
src/scanner/: keywords.h  lexical.c  scanner.h  source.c  source.h
src/symtab/: string_hash.c  string_hash.h  symtab.c  symtab.h  symtab_hash.c  symtab_hash.h
